--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Weight traking app</title>
+        <title>Trackooo</title>
         <script src="./Javascript/index.js"></script>
         <script src="./Javascript/graph.js"></script>
         <script src="./Javascript/cond.js"></script>
@@ -42,7 +42,7 @@
 
             </div>
             <a href="index.html">
-        <h1>Weight Tracking app</h1></a>
+        <h1>Trackooo</h1></a>
       <a href="Calorie.html" id="cal">Calorie Calculator</a>
     </div>
     <a href="#cal" id="toup">
