--- a/calorie.html
+++ b/calorie.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Weight traking app|Calorie calculator</title>
+        <title>Trackooo|Calorie calculator</title>
         <script src="./javascript/caloriecalc.js"></script>
         <link rel="stylesheet" href="style.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg==" crossorigin="anonymous"></script>
@@ -39,7 +39,7 @@
 
             </div>
             <a href="index.html">
-                <h1>Weight Tracking app</h1></a>
+                <h1>Trackooo</h1></a>
       <a href="Calorie.html" id="cal">Calorie Calculator</a>
     </div>
     <div style="margin-top: 13%;" id="calpage">
