--- a/calorie.html
+++ b/calorie.html
@@ -120,5 +120,10 @@
     border: solid rgb(216, 216, 216) 2px;
     font-weight: 500;
     }
+	    @media only screen and (max-width: 600px) {
+#calpage{
+	margin-top:30%;
+		    }
+}
     </style>
 </html>
